# NestDetect

./: .editorconfig  .gitattributes  .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: tests.yml
.streamlit/: config.toml
configs/: README.md
configs/ablations/: cms-headwise.yaml  cms-v1.yaml  cms-v2.yaml  cms-v3.yaml
configs/baseline/: base.yaml  incremental-no-replay.yaml  incremental-replay.yaml
configs/hope/: base.yaml  incremental-no-replay.yaml  incremental-replay.yaml
configs/models/: yolo11n-hope.yaml
datasets/: README.md
datasets/step1_base/: data.yaml  dataset_metadata.json  manifest.csv
datasets/step2_new_classes/: data.yaml  dataset_metadata.json  manifest.csv
docs/: architecture.md  dataset.md  model-card.md  replay-free-study.md  reproducibility.md  research-report.md
models/: README.md  nestdetect_final.metadata.json  nestdetect_hope.metadata.json  nestdetect_hope_cms_only_v4.metadata.json  nestdetect_hope_cms_v4_replay_fusion.metadata.json  nestdetect_hope_cms_v5.metadata.json
results/: README.md
results/baseline/: comparison.csv  evaluation.csv  summary.json
results/cms/: comparison.csv  evaluation.csv  summary.json
results/hope/: comparison.csv  evaluation.csv  summary.json
scripts/: build_cms_v4.py  build_cms_v5.py  build_datasets.py  consolidate_cms.py  evaluate_baseline.py  evaluate_cms.py  evaluate_hope.py  plot_results.py  prepare_coco_subset.py
tests/: conftest.py  test_conditional_memory.py  test_continual.py  test_dataset.py  test_evaluation.py  test_hope.py  test_memory.py  test_optim.py
(+17 files in other folders)
