[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nestdetect"
version = "2.0.0"
description = "YOLO11n-HoPe class-incremental object detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ultralytics>=8.3.0,<9",
  "opencv-python>=4.8",
  "streamlit>=1.35",
  "streamlit-webrtc>=0.63,<1",
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "Pillow>=10.0",
  "PyYAML>=6.0",
]
keywords = [
  "object-detection",
  "incremental-learning",
  "catastrophic-forgetting",
  "replay-memory",
  "yolo",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
nestdetect = "nestdetect.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
